--- a/plugin/locale/zh_CN/LC_MESSAGES/Foreca.po
+++ b/plugin/locale/zh_CN/LC_MESSAGES/Foreca.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Foreca 3.1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-17 15:55+0200\n"
-"PO-Revision-Date: 2020-06-18 12:16+0800\n"
+"PO-Revision-Date: 2020-06-19 11:13+0800\n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: n.a.\n"
 "Language: ru\n"
@@ -90,15 +90,15 @@ msgstr ""
 
 #: ../ui.py:1482
 msgid "Australia"
-msgstr ""
+msgstr "澳大利亚"
 
 #: ../ui.py:1443
 msgid "Austria"
-msgstr ""
+msgstr "奥地利"
 
 #: ../ui.py:1941
 msgid "Backgroundcolor"
-msgstr ""
+msgstr "背景色"
 
 #: ../ui.py:1418
 msgid "Baden-Wuerttemberg"
@@ -106,15 +106,15 @@ msgstr ""
 
 #: ../ui.py:1419
 msgid "Bavaria"
-msgstr ""
+msgstr "巴伐利亚"
 
 #: ../ui.py:1444
 msgid "Belgium"
-msgstr ""
+msgstr "比利时"
 
 #: ../ui.py:1420
 msgid "Berlin"
-msgstr ""
+msgstr "柏林"
 
 #: ../ui.py:1138
 msgid "Blue - Assign to Home"
@@ -130,11 +130,11 @@ msgstr ""
 
 #: ../ui.py:1421
 msgid "Brandenburg"
-msgstr ""
+msgstr "勃兰登堡"
 
 #: ../ui.py:1422
 msgid "Bremen"
-msgstr ""
+msgstr "不来梅"
 
 #: ../ui.py:1906
 msgid "Cancel"
@@ -154,31 +154,31 @@ msgstr "城市"
 
 #: ../ui.py:1934
 msgid "City names as labels in the Main screen"
-msgstr ""
+msgstr "城市名称作为主屏幕中的标签"
 
 #: ../ui.py:1385
 msgid "Cloudcover Video"
-msgstr ""
+msgstr "云层视频"
 
 #: ../ui.py:1358 ../ui.py:1483
 msgid "Continents"
-msgstr ""
+msgstr "大洲"
 
 #: ../ui.py:1445
 msgid "Czech Republic"
-msgstr ""
+msgstr "捷克共和国"
 
 #: ../ui.py:1944
 msgid "Debug"
-msgstr ""
+msgstr "调试"
 
 #: ../ui.py:1446
 msgid "Denmark"
-msgstr ""
+msgstr "丹麦"
 
 #: ../ui.py:1943
 msgid "Display in extensions menu"
-msgstr ""
+msgstr "在扩展菜单中显示"
 
 #: ../ui.py:1134 ../ui.py:1371 ../ui.py:1632
 msgid "Down - Next"
@@ -190,15 +190,15 @@ msgstr ""
 
 #: ../ui.py:1479
 msgid "East Asia"
-msgstr ""
+msgstr "东亚"
 
 #: ../ui.py:1387
 msgid "Eumetsat"
-msgstr ""
+msgstr "欧洲气象卫星组织"
 
 #: ../ui.py:1359 ../ui.py:1468 ../ui.py:1472
 msgid "Europe"
-msgstr ""
+msgstr "欧洲"
 
 #: ../ui.py:659 ../ui.py:1130 ../ui.py:1367 ../ui.py:1628
 msgid "Exit - End"
@@ -214,35 +214,35 @@ msgstr "收藏2"
 
 #: ../ui.py:1936
 msgid "Font size in slideshow"
-msgstr ""
+msgstr "幻灯片中的字体大小"
 
 #: ../plugin.py:21 ../plugin.py:27 ../ui.py:635 ../ui.py:654
 msgid "Foreca Weather Forecast"
-msgstr ""
+msgstr "Foreca天气预报"
 
 #: ../ui.py:1124
 msgid "Forecast"
-msgstr ""
+msgstr "预测"
 
 #: ../ui.py:1935
 msgid "Frame size in full view"
-msgstr ""
+msgstr "全视图中的帧大小"
 
 #: ../ui.py:1447
 msgid "France"
-msgstr ""
+msgstr "法国"
 
 #: ../ui.py:1360 ../ui.py:1439 ../ui.py:1448
 msgid "Germany"
-msgstr ""
+msgstr "德国"
 
 #: ../ui.py:1450
 msgid "Great Britain"
-msgstr ""
+msgstr "英国"
 
 #: ../ui.py:1449
 msgid "Greece"
-msgstr ""
+msgstr "希腊"
 
 #: ../ui.py:1136
 msgid "Green - Assign to Favorite 1"
@@ -258,23 +258,23 @@ msgstr ""
 
 #: ../ui.py:1423
 msgid "Hamburg"
-msgstr ""
+msgstr "汉堡"
 
 #: ../ui.py:1424
 msgid "Hesse"
-msgstr ""
+msgstr "赫斯"
 
 #: ../ui.py:651 ../ui.py:866 ../ui.py:919 ../ui.py:1123
 msgid "Home"
-msgstr ""
+msgstr "主页"
 
 #: ../ui.py:1451
 msgid "Hungary"
-msgstr ""
+msgstr "匈牙利"
 
 #: ../ui.py:183
 msgid "Imperial (C, mph)"
-msgstr ""
+msgstr "英制（C，mph）"
 
 #: ../ui.py:661
 msgid "Info - Legend"
@@ -282,15 +282,15 @@ msgstr ""
 
 #: ../ui.py:1452
 msgid "Ireland"
-msgstr ""
+msgstr "爱尔兰"
 
 #: ../ui.py:1453
 msgid "Italy"
-msgstr ""
+msgstr "意大利"
 
 #: ../ui.py:1454
 msgid "Latvia"
-msgstr ""
+msgstr "拉脱维亚"
 
 #: ../ui.py:663
 msgid "Left - Previous day"
@@ -310,11 +310,11 @@ msgstr ""
 
 #: ../ui.py:1426
 msgid "Lower Saxony"
-msgstr ""
+msgstr "下萨克森"
 
 #: ../ui.py:1455
 msgid "Luxembourg"
-msgstr ""
+msgstr "卢森堡"
 
 #: ../ui.py:653
 msgid "Maps"
@@ -330,15 +330,15 @@ msgstr ""
 
 #: ../ui.py:183
 msgid "Metric (C, km/h)"
-msgstr ""
+msgstr "公制（C，km/h）"
 
 #: ../ui.py:183
 msgid "Metric (C, m/s)"
-msgstr ""
+msgstr "公制（C，m/s）"
 
 #: ../ui.py:1476
 msgid "Middle America"
-msgstr ""
+msgstr "中美"
 
 #: ../ui.py:1481
 msgid "Middle Asia"
@@ -390,7 +390,7 @@ msgstr "波兰"
 
 #: ../ui.py:1458
 msgid "Portugal"
-msgstr ""
+msgstr "葡萄牙"
 
 #: ../ui.py:1372
 msgid "Red - Continents"
@@ -418,15 +418,15 @@ msgstr ""
 
 #: ../ui.py:1459
 msgid "Russia"
-msgstr ""
+msgstr "俄罗斯"
 
 #: ../ui.py:1429
 msgid "Saarland"
-msgstr ""
+msgstr "萨尔兰"
 
 #: ../ui.py:1353 ../ui.py:1362
 msgid "Satellite photos"
-msgstr ""
+msgstr "卫星照片"
 
 #: ../ui.py:1907
 msgid "Save"
@@ -434,7 +434,7 @@ msgstr "保存"
 
 #: ../ui.py:1430
 msgid "Saxony"
-msgstr ""
+msgstr "萨克森"
 
 #: ../ui.py:1431
 msgid "Saxony-Anhalt"
@@ -442,7 +442,7 @@ msgstr ""
 
 #: ../ui.py:1937
 msgid "Scaling Mode"
-msgstr ""
+msgstr "缩放模式"
 
 #: ../ui.py:1432
 msgid "Schleswig-Holstein"
@@ -458,7 +458,7 @@ msgstr "选择时间格式"
 
 #: ../ui.py:1932
 msgid "Select units"
-msgstr ""
+msgstr "选择单位"
 
 #: ../ui.py:1361 ../ui.py:1622
 msgid "Settings"
@@ -466,7 +466,7 @@ msgstr "设置"
 
 #: ../ui.py:1939
 msgid "Show Infoline"
-msgstr ""
+msgstr "显示信息线"
 
 #: ../ui.py:1383
 msgid "Showerradar Video"
@@ -474,31 +474,31 @@ msgstr ""
 
 #: ../ui.py:1938
 msgid "Slide Time (seconds)"
-msgstr ""
+msgstr "滑动时间（秒）"
 
 #: ../ui.py:1942
 msgid "Slide picture in loop"
-msgstr ""
+msgstr "循环播放幻灯片"
 
 #: ../ui.py:1905 ../ui.py:1908
 msgid "SlideShow Settings"
-msgstr ""
+msgstr "幻灯片放映设置"
 
 #: ../ui.py:1460
 msgid "Slovakia"
-msgstr ""
+msgstr "斯洛伐克"
 
 #: ../ui.py:1474
 msgid "South Africa"
-msgstr ""
+msgstr "南非"
 
 #: ../ui.py:1477
 msgid "South America"
-msgstr ""
+msgstr "南美洲"
 
 #: ../ui.py:1480
 msgid "Southeast Asia"
-msgstr ""
+msgstr "东南亚"
 
 #: ../ui.py:1461
 msgid "Spain"
@@ -506,7 +506,7 @@ msgstr "西班牙"
 
 #: ../ui.py:1462
 msgid "Switzerland"
-msgstr ""
+msgstr "瑞士"
 
 #: ../ui.py:454
 msgid "Temp"
@@ -514,7 +514,7 @@ msgstr "温度"
 
 #: ../ui.py:1384
 msgid "Temperature Video"
-msgstr ""
+msgstr "温度视频"
 
 #: ../ui.py:1940
 msgid "Textcolor"
@@ -571,11 +571,11 @@ msgstr ""
 
 #: ../plugin.py:22 ../plugin.py:28
 msgid "Weather forecast for the upcoming 10 days"
-msgstr ""
+msgstr "未来10天天气预报"
 
 #: ../ui.py:1382
 msgid "Weather map Video"
-msgstr ""
+msgstr "天气图视频"
 
 #: ../ui.py:642
 msgid "Week"
