--- a/plugin/locale/fi/LC_MESSAGES/Foreca.po
+++ b/plugin/locale/fi/LC_MESSAGES/Foreca.po
@@ -1,10 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Foreca 3.0.0\n"
+"Project-Id-Version: Foreca 3.2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 15:55+0200\n"
-"PO-Revision-Date: 2016-05-06 13:57+0200\n"
-"Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
+"PO-Revision-Date: 2021-05-18 00:43+0300\n"
+"Last-Translator: tomppaa www.huoltovalikko.com>\n"
 "Language-Team: \n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
@@ -14,10 +13,10 @@ msgstr ""
 "X-Poedit-Basepath: ../../..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 2.4.3\n"
+"POT-Creation-Date: \n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: ../ui.py:844
 msgid ""
 "\n"
 "<   >       =   Prognosis next/previous day\n"
@@ -37,628 +36,513 @@ msgid ""
 "Wind direction = Arrow to right: Wind from the West"
 msgstr ""
 "\n"
-"<   >       =  Ennuste seuraava/edellinen pÃ¤ivÃ¤\n"
-"0 - 9       =  Ennuste seuraavat (x) pÃ¤ivÃ¤Ã¤\n"
+"<   >       =  Ennuste seuraava/edellinen päivää¤\n"
+"0 - 9       =  Ennuste seuraavat (x) päivää\n"
 "\n"
 "VOL+/-  =   Nopea selaus 100 (kaupunkia)\n"
 "Bouquet+/-  =   Nopea selaus 500 (kaupunkia)\n"
 "\n"
-"Info       =   TÃ¤mÃ¤ info\n"
+"Info       =   Tämä info\n"
 "Menu    =   Satelliitti kuvat/kartat\n"
 "\n"
-"Rot       =   LÃ¤mpÃ¶tilat seuraavat 5 pÃ¤ivÃ¤Ã¤\n"
+"Rot       =   Lämpötilat seuraavat 5 päivää\n"
 "Grün    =   Ennuste Suosikki 1\n"
 "Gelb     =   Ennuste Suosikki 2\n"
 "Blau     =   Ennuste Kotipaikka\n"
 "\n"
-"Tuulensuunta = Nuoli oikealle: Tuuli lÃ¤nnestÃ¤"
+"Tuulensuunta = Nuoli oikealle: Tuuli lännestä"
 
-#: ../ui.py:674
 msgid "0 - Today"
-msgstr "0 - TÃ¤nÃ¤Ã¤n"
+msgstr "0 - Tänään"
 
-#: ../ui.py:675
 msgid "1 - Today + 1 day"
-msgstr "1 - TÃ¤nÃ¤Ã¤n + 1 pÃ¤ivÃ¤"
+msgstr "1 - Tänään + 1 päivä"
 
-#: ../ui.py:184
-msgid "12 h"
-msgstr ""
-
-#: ../ui.py:676
 msgid "2 - Today + 2 days"
-msgstr "2 - TÃ¤nÃ¤Ã¤n + 2 pÃ¤ivÃ¤Ã¤"
+msgstr "2 - Tänään + 2 päivä"
 
-#: ../ui.py:184
-msgid "24 h"
-msgstr ""
-
-#: ../ui.py:677
 msgid "3 - Today + 3 days"
-msgstr "3 - TÃ¤nÃ¤Ã¤n + 3 pÃ¤ivÃ¤Ã¤"
+msgstr "3 - Tänään + 3 päivä"
 
-#: ../ui.py:678
 msgid "4 - Today + 4 days"
-msgstr "4 - TÃ¤nÃ¤Ã¤n + 4 pÃ¤ivÃ¤Ã¤"
+msgstr "4 - Tänään + 4 päivä"
 
-#: ../ui.py:679
 msgid "5 - Today + 5 days"
-msgstr "5 - TÃ¤nÃ¤Ã¤n + 5 pÃ¤ivÃ¤Ã¤"
+msgstr "5 - Tänään + 5 päivä"
 
-#: ../ui.py:680
 msgid "6 - Today + 6 days"
-msgstr "6 - TÃ¤nÃ¤Ã¤n + 6 pÃ¤ivÃ¤Ã¤"
+msgstr "6 - Tänään + 6 päivä"
 
-#: ../ui.py:681
 msgid "7 - Today + 7 days"
-msgstr "7 - TÃ¤nÃ¤Ã¤n + 7 pÃ¤ivÃ¤Ã¤"
+msgstr "7 - Tänään + 7 päivä"
 
-#: ../ui.py:682
 msgid "8 - Today + 8 days"
-msgstr "8 - TÃ¤nÃ¤Ã¤n + 8 pÃ¤ivÃ¤Ã¤"
+msgstr "8 - Tänään + 8 päivä"
 
-#: ../ui.py:683
 msgid "9 - Today + 9 days"
-msgstr "9 - TÃ¤nÃ¤Ã¤n + 9 pÃ¤ivÃ¤Ã¤"
+msgstr "9 - Tänään + 9 päivä"
 
-#: ../ui.py:1386
 msgid "Air pressure"
 msgstr "Ilmanpainekartta"
 
-#: ../ui.py:1482
 msgid "Australia"
 msgstr "Austraalia"
 
-#: ../ui.py:1443
 msgid "Austria"
-msgstr "ItÃ¤valta"
+msgstr "Itävalta"
 
-#: ../ui.py:1941
 msgid "Backgroundcolor"
-msgstr "TaustavÃ¤ri"
+msgstr "Taustaväri"
 
-#: ../ui.py:1418
 msgid "Baden-Wuerttemberg"
 msgstr "Baden-Württemberg"
 
-#: ../ui.py:1419
 msgid "Bavaria"
 msgstr "Baijeri"
 
-#: ../ui.py:1444
 msgid "Belgium"
 msgstr "Belgia"
 
-#: ../ui.py:1420
 msgid "Berlin"
 msgstr "Berliini"
 
-#: ../ui.py:1138
 msgid "Blue - Assign to Home"
 msgstr "Sininen - Siirry Kotipaikkaan"
 
-#: ../ui.py:673
 msgid "Blue - Home"
 msgstr "Sininen - Kotipaikka"
 
-#: ../ui.py:1375 ../ui.py:1633
 msgid "Blue - Settings"
 msgstr "Sininen - Asetukset"
 
-#: ../ui.py:1421
 msgid "Brandenburg"
 msgstr "Brandenburg"
 
-#: ../ui.py:1422
 msgid "Bremen"
 msgstr "Bremen"
 
-#: ../ui.py:1906
 msgid "Cancel"
 msgstr "Takaisin"
 
-#: ../ui.py:1139
 msgid "Channel+ - 500 back"
 msgstr "Kanava+ - 500 takaisin"
 
-#: ../ui.py:1140
 msgid "Channel- - 500 forward"
 msgstr "Kanava- - 500 seuraavaa"
 
-#: ../ui.py:643
 msgid "City"
 msgstr "Kaupunki"
 
-#: ../ui.py:1934
 msgid "City names as labels in the Main screen"
 msgstr "Kaupunkien nimet etusivulla"
 
-#: ../ui.py:1385
 msgid "Cloudcover Video"
 msgstr "Pilvitutkakartta"
 
-#: ../ui.py:1358 ../ui.py:1483
 msgid "Continents"
 msgstr "Maanosat"
 
-#: ../ui.py:1445
 msgid "Czech Republic"
 msgstr "Tsekki"
 
-#: ../ui.py:1944
 msgid "Debug"
 msgstr "Oletus"
 
-#: ../ui.py:1446
 msgid "Denmark"
 msgstr "Tanska"
 
-#: ../ui.py:1943
-msgid "Display in extensions menu"
-msgstr ""
-
-#: ../ui.py:1134 ../ui.py:1371 ../ui.py:1632
 msgid "Down - Next"
 msgstr "Alas - Seuraava"
 
-#: ../ui.py:666
 msgid "Down - Next page"
 msgstr "Alas - Seuraava sivu"
 
-#: ../ui.py:1479
 msgid "East Asia"
-msgstr "ItÃ¤-Aasia"
+msgstr "Itä Aasia"
 
-#: ../ui.py:1387
 msgid "Eumetsat"
 msgstr "Eumetsat"
 
-#: ../ui.py:1359 ../ui.py:1468 ../ui.py:1472
 msgid "Europe"
 msgstr "Eurooppa"
 
-#: ../ui.py:659 ../ui.py:1130 ../ui.py:1367 ../ui.py:1628
 msgid "Exit - End"
 msgstr "Exit - Poistu"
 
-#: ../ui.py:649 ../ui.py:864 ../ui.py:917 ../ui.py:1121
 msgid "Favorite 1"
 msgstr "Suosikki 1"
 
-#: ../ui.py:650 ../ui.py:865 ../ui.py:918 ../ui.py:1122
 msgid "Favorite 2"
 msgstr "Suosikki 2"
 
-#: ../ui.py:1936
-msgid "Font size in slideshow"
-msgstr ""
-
-#: ../plugin.py:21 ../plugin.py:27 ../ui.py:635 ../ui.py:654
 msgid "Foreca Weather Forecast"
-msgstr "Foreca SÃ¤Ã¤ennuste"
+msgstr "Foreca Sääennuste"
 
-#: ../ui.py:1124
 msgid "Forecast"
 msgstr "Ennuste"
 
-#: ../ui.py:1935
 msgid "Frame size in full view"
 msgstr "Kokoruutu"
 
-#: ../ui.py:1447
 msgid "France"
 msgstr "Ranska"
 
-#: ../ui.py:1360 ../ui.py:1439 ../ui.py:1448
-msgid "Germany"
-msgstr ""
-
-#: ../ui.py:1450
 msgid "Great Britain"
 msgstr "Iso Britannia"
 
-#: ../ui.py:1449
 msgid "Greece"
 msgstr "Kreikka"
 
-#: ../ui.py:1136
 msgid "Green - Assign to Favorite 1"
-msgstr "VihreÃ¤ - Siirry Suosikki 1"
+msgstr "Vihreä - Siirry Suosikki 1"
 
-#: ../ui.py:1373
 msgid "Green - Europe"
-msgstr "VihreÃ¤ - Eurooppa"
+msgstr "Vihreä - Eurooppa"
 
-#: ../ui.py:671
 msgid "Green - Favorite 1"
-msgstr "VihreÃ¤ - Suosikki 1"
+msgstr "Vihreä - Suosikki 1"
 
-#: ../ui.py:1423
 msgid "Hamburg"
 msgstr "Hampuri"
 
-#: ../ui.py:1424
 msgid "Hesse"
 msgstr "Hessen"
 
-#: ../ui.py:651 ../ui.py:866 ../ui.py:919 ../ui.py:1123
 msgid "Home"
 msgstr "Kotipaikka"
 
-#: ../ui.py:1451
+msgid "Humidity:"
+msgstr "Suht. kosteus:"
+
 msgid "Hungary"
 msgstr "Unkari"
 
-#: ../ui.py:183
 msgid "Imperial (C, mph)"
 msgstr "UK (C, mph)"
 
-#: ../ui.py:661
 msgid "Info - Legend"
-msgstr "Info"
+msgstr "Tietoja"
 
-#: ../ui.py:1452
 msgid "Ireland"
 msgstr "Irlanti"
 
-#: ../ui.py:1453
 msgid "Italy"
 msgstr "Italia"
 
-#: ../ui.py:1454
 msgid "Latvia"
 msgstr "Latvia"
 
-#: ../ui.py:663
 msgid "Left - Previous day"
-msgstr "Vasen -  Edellinen pÃ¤ivÃ¤"
+msgstr "Vasen -  Edellinen päivä"
 
-#: ../ui.py:1131 ../ui.py:1368 ../ui.py:1629
 msgid "Left - Previous page"
 msgstr "Vasen - Edellinen sivu"
 
-#: ../ui.py:667
 msgid "Left arrow - Previous day"
-msgstr "Vasen nuoli - Edellinen pÃ¤ivÃ¤"
+msgstr "Vasen nuoli - Edellinen päivää"
 
-#: ../ui.py:652
 msgid "Legend"
 msgstr "Info"
 
-#: ../ui.py:1426
 msgid "Lower Saxony"
 msgstr "Ala-Saksi"
 
-#: ../ui.py:1455
 msgid "Luxembourg"
 msgstr "Luxemburg"
 
-#: ../ui.py:653
 msgid "Maps"
 msgstr "Kartat"
 
-#: ../ui.py:1425
 msgid "Mecklenburg-Vorpommern"
 msgstr "Mecklenburg-Etu-Pommeri"
 
-#: ../ui.py:660
 msgid "Menu - Weather maps"
-msgstr "Menu - SÃ¤Ã¤kartat"
+msgstr "Valikko - sääkartat"
 
-#: ../ui.py:183
 msgid "Metric (C, km/h)"
 msgstr "Metrinen (C, km/h)"
 
-#: ../ui.py:183
 msgid "Metric (C, m/s)"
 msgstr "Metrinen (C, m/s)"
 
-#: ../ui.py:1476
 msgid "Middle America"
 msgstr "Keski Amerikka"
 
-#: ../ui.py:1481
 msgid "Middle Asia"
 msgstr "Keski-Aasia"
 
-#: ../ui.py:1478
 msgid "Middle East"
-msgstr "LÃ¤hi-itÃ¤"
+msgstr "Lähi itä"
 
-#: ../ui.py:1456
 msgid "Netherlands"
 msgstr "Hollanti"
 
-#: ../ui.py:1473
 msgid "North Africa"
 msgstr "Pohjois Afrikka"
 
-#: ../ui.py:1475
 msgid "North America"
 msgstr "Pohjois Amerikka"
 
-#: ../ui.py:1427
 msgid "North Rhine-Westphalia"
 msgstr "Nordrhein-Westfalen"
 
-#: ../ui.py:662
 msgid "OK - City"
 msgstr "OK - Kaupunki"
 
-#: ../ui.py:1135
 msgid "OK - Select"
 msgstr "OK - Valitse"
 
-#: ../ui.py:1376 ../ui.py:1634
 msgid "OK - Show"
-msgstr "OK - NÃ¤ytÃ¤"
+msgstr "OK - Näytä"
 
-#: ../ui.py:638 ../ui.py:703
 msgid "Please wait ..."
 msgstr "Odota lataan ..."
 
-#: ../ui.py:1771
 msgid "Please wait, photo is being loaded ..."
 msgstr "Odota lataan kuvaa ..."
 
-#: ../ui.py:1457
 msgid "Poland"
 msgstr "Puola"
 
-#: ../ui.py:1458
 msgid "Portugal"
 msgstr "Portugali"
 
-#: ../ui.py:1372
 msgid "Red - Continents"
 msgstr "Punainen - Maanosat"
 
-#: ../ui.py:669
 msgid "Red - Weekoverview"
 msgstr "Punainen - Viikkoennuste"
 
-#: ../ui.py:1428
 msgid "Rhineland-Palatine"
 msgstr "Rheinland-Pfalz"
 
-#: ../ui.py:664
 msgid "Right - Next day"
-msgstr "Oikea - Seuraava pÃ¤ivÃ¤"
+msgstr "Oikea - Seuraava päivä"
 
-#: ../ui.py:1132 ../ui.py:1369 ../ui.py:1630
 msgid "Right - Next page"
 msgstr "Oikea - Seuraava sivu"
 
-#: ../ui.py:668
 msgid "Right arrow - Next day"
 msgstr "Oikea nuoli - Seuraava pÃ¤ivÃ¤"
 
-#: ../ui.py:1459
 msgid "Russia"
-msgstr "VenÃ¤jÃ¤"
+msgstr "Venäjä"
 
-#: ../ui.py:1429
 msgid "Saarland"
 msgstr "Saarland"
 
-#: ../ui.py:1353 ../ui.py:1362
 msgid "Satellite photos"
 msgstr "Satelliitti kuvat"
 
-#: ../ui.py:1907
 msgid "Save"
 msgstr "Tallenna"
 
-#: ../ui.py:1430
 msgid "Saxony"
 msgstr "Saksi"
 
-#: ../ui.py:1431
 msgid "Saxony-Anhalt"
 msgstr "Saksi-Anhalt"
 
-#: ../ui.py:1937
 msgid "Scaling Mode"
 msgstr "Skaalaustila"
 
-#: ../ui.py:1432
 msgid "Schleswig-Holstein"
 msgstr "Schleswig-Holstein"
 
-#: ../ui.py:1115 ../ui.py:1125
 msgid "Select a city"
 msgstr "Valitse paikkakunta"
 
-#: ../ui.py:1933
 msgid "Select time format"
 msgstr "Aika formaatti"
 
-#: ../ui.py:1932
 msgid "Select units"
-msgstr "YksikÃ¶t"
+msgstr "Yksiköt"
 
-#: ../ui.py:1361 ../ui.py:1622
 msgid "Settings"
 msgstr "Asetukset"
 
-#: ../ui.py:1939
 msgid "Show Infoline"
-msgstr "NÃ¤ytÃ¤ Inforivi"
+msgstr "Näytä Inforivi"
 
-#: ../ui.py:1383
 msgid "Showerradar Video"
 msgstr "Sadetutkakartta"
 
-#: ../ui.py:1938
 msgid "Slide Time (seconds)"
 msgstr "Nopeus (Sekuntia)"
 
-#: ../ui.py:1942
 msgid "Slide picture in loop"
 msgstr "Jatkuva toisto"
 
-#: ../ui.py:1905 ../ui.py:1908
 msgid "SlideShow Settings"
 msgstr "Selaus asetukset"
 
-#: ../ui.py:1460
-msgid "Slovakia"
-msgstr ""
-
-#: ../ui.py:1474
 msgid "South Africa"
-msgstr "EtelÃ¤ Afrikka"
+msgstr "Etelä Afrikka"
 
-#: ../ui.py:1477
 msgid "South America"
-msgstr "EtelÃ¤ Amerikka"
+msgstr "Etelä Amerikka"
 
-#: ../ui.py:1480
 msgid "Southeast Asia"
 msgstr "Kaakkois-Aasia"
 
-#: ../ui.py:1461
 msgid "Spain"
 msgstr "Espanja"
 
-#: ../ui.py:1462
 msgid "Switzerland"
 msgstr "Sveitsi"
 
-#: ../ui.py:454
 msgid "Temp"
-msgstr "LÃ¤mpÃ¶tila"
+msgstr "Lämpötila"
 
-#: ../ui.py:1384
 msgid "Temperature Video"
-msgstr "LÃ¤mpÃtilakartta"
+msgstr "Lämpätilakartta"
 
-#: ../ui.py:1940
 msgid "Textcolor"
-msgstr "Tekstin vÃ¤ri"
+msgstr "Tekstin vöri"
 
-#: ../ui.py:1231
 msgid ""
 "This city is stored as favorite 1!\n"
 "\n"
 "                             "
 msgstr ""
-"TÃ¤mÃ¤ on Suosikki 1!\n"
+"Tämä on Suosikki 1!\n"
 "\n"
 "                   "
 
-#: ../ui.py:1242
 msgid ""
 "This city is stored as favorite 2!\n"
 "\n"
 "                             "
 msgstr ""
-"TÃ¤mÃ¤ on Suosikki 2!\n"
+"Tämä on Suosikki 2!\n"
 "\n"
 "                    "
 
-#: ../ui.py:1220
 msgid ""
 "This city is stored as home!\n"
 "\n"
 "                                  "
 msgstr ""
-"TÃ¤mÃ¤ on kotipaikka!\n"
+"Tämä on kotipaikka!\n"
 "\n"
 "                      "
 
-#: ../ui.py:1433
 msgid "Thuringia"
 msgstr "Thüringen"
 
-#: ../ui.py:183
 msgid "US (F, mph)"
 msgstr "US"
 
-#: ../ui.py:1133 ../ui.py:1370 ../ui.py:1631
 msgid "Up - Previous"
-msgstr "YlÃ¶s - Edellinen"
+msgstr "Ylös - Edellinen"
 
-#: ../ui.py:665
 msgid "Up - Previous page"
-msgstr "YlÃs - Edellinen sivu"
+msgstr "Ylös - Edellinen sivu"
 
-#: ../ui.py:654
 msgid "Version "
-msgstr "Versio"
+msgstr "Versio "
 
-#: ../ui.py:1142
 msgid "Volume+ - 100 back"
-msgstr "Ã¤Ã¤ni+ - 100 edellistÃ¤"
+msgstr "Ääni + - 100 edellistä"
 
-#: ../ui.py:1141
 msgid "Volume- - 100 forward"
-msgstr "Ã¤Ã¤ni- - 100 seuraavaa"
+msgstr "Ääni - - 100 seuraavaa"
 
-#: ../plugin.py:22 ../plugin.py:28
 msgid "Weather forecast for the upcoming 10 days"
-msgstr "SÃ¤Ã¤ennuste seuraavat 10 pÃ¤ivÃ¤Ã¤"
+msgstr "Sääennuste seuraavat 10 päivää"
 
-#: ../ui.py:1382
 msgid "Weather map Video"
-msgstr "SÃ¤Ã¤kartta"
+msgstr "Sääkartta"
 
-#: ../ui.py:642
 msgid "Week"
 msgstr "Viikko"
 
-#: ../ui.py:469
 msgid "Wind"
 msgstr "Tuuli"
 
-#: ../ui.py:1137
 msgid "Yellow - Assign to Favorite 2"
 msgstr "Keltainen - Siirry Suosikki 2"
 
-#: ../ui.py:672
 msgid "Yellow - Favorite 2"
 msgstr "Keltainen - Suosikki 2"
 
-#: ../ui.py:1374
-msgid "Yellow - Germany"
-msgstr ""
-
-#: ../ui.py:174
 msgid "better"
 msgstr "parempi"
 
-#: ../ui.py:175 ../ui.py:176
 msgid "black"
 msgstr "musta"
 
-#: ../ui.py:175 ../ui.py:176
 msgid "blue"
 msgstr "sininen"
 
-#: ../ui.py:175 ../ui.py:176
 msgid "green"
-msgstr "vihreÃ¤"
+msgstr "vihreä"
 
-#: ../ui.py:1551
 msgid "h"
 msgstr "t"
 
-#: ../ui.py:175 ../ui.py:176
 msgid "red"
 msgstr "punainen"
 
-#: ../ui.py:174
 msgid "simple"
 msgstr "simppeli"
 
-#: ../ui.py:175 ../ui.py:176
 msgid "yellow"
 msgstr "keltainen"
 
-#: ../ui.py:413
-msgid "°C"
-msgstr ""
+msgid "Feels"
+msgstr "Tuntuu kuin"
 
-#: ../ui.py:410
-msgid "°F"
-msgstr ""
+msgid "feels like"
+msgstr "Tuntuu kuin"
+
+msgid "Overcast and light wet snow"
+msgstr "Pilvistä, vähäistä räntäsadetta"
+
+msgid "Partly cloudy"
+msgstr "Puolipilvistä"
+
+msgid "Partly cloudy and light rain"
+msgstr "Puolipilvistä, vähäistä sadetta"
+
+msgid "Overcast and snow showers"
+msgstr "Pilvistä, ajoittaista lumisadetta"
+
+msgid "Overcast and showers"
+msgstr "Pilvistä, ajoittaista sadetta"
+
+msgid "Overcast and light rain"
+msgstr "Pilvistä, vähäistä sadetta"
+
+msgid "Overcast"
+msgstr "Pilvistä"
+
+msgid "Overcast and wet snow showers"
+msgstr "Pilvistä, ajoittaista räntäsadetta"
+
+msgid "Overcast and wet snow"
+msgstr "Pilvistä, runsasta räntäsadetta"
+
+msgid "Overcast and light snow"
+msgstr "Pilvistä, vähäistä lumisadetta"
+
+msgid "Overcast and rain"
+msgstr "Pilvistä, runsasta sadetta"
+
+msgid "Cloudy"
+msgstr "Pilvistä"
+
+msgid "Mostly clear"
+msgstr "Melko selkeää"
+
+msgid "Cloudy and light rain"
+msgstr "Melko pilvistä, vähäistä sadetta"
+
+msgid "Clear"
+msgstr "Selkeää"
+
+msgid "Display in extensions menu"
+msgstr "Näytä laajennukset valikossa"
+
+msgid "Font size in slideshow"
+msgstr "Fontti koko sivu näkyvässä"
