--- a/plugin/locale/fi/LC_MESSAGES/Foreca.po
+++ b/plugin/locale/fi/LC_MESSAGES/Foreca.po
@@ -2,19 +2,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Foreca 3.2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2021-06-03 23:55+0300\n"
-"Last-Translator: tomppaa www.huoltovalikko.com>\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2023-01-06 14:49+0200\n"
+"Last-Translator: Orlandox\n"
 "Language-Team: \n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: ../../..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.4.2\n"
-"POT-Creation-Date: \n"
+"X-Generator: Poedit 3.2.2\n"
 "X-Poedit-SearchPath-0: .\n"
 
 msgid ""
@@ -36,19 +36,19 @@ msgid ""
 "Wind direction = Arrow to right: Wind from the West"
 msgstr ""
 "\n"
-"<   >       =  Ennuste seuraava/edellinen päivää¤\n"
-"0 - 9       =  Ennuste seuraavat (x) päivää\n"
+"< > = Ennuste seuraava/edellinen päivä\n"
+"0 - 9 = Ennuste seuraavat (x) päivää\n"
 "\n"
-"VOL+/-  =   Nopea selaus 100 (kaupunkia)\n"
-"Bouquet+/-  =   Nopea selaus 500 (kaupunkia)\n"
+"Vol+/- = Nopea selaus 100 (kaupunkia)\n"
+"Ch+/- = Nopea selaus 500 (kaupunkia)\n"
 "\n"
-"Info       =   Tämä info\n"
-"Menu    =   Satelliitti kuvat/kartat\n"
+"Info = Tämä info\n"
+"Menu = Satelliitti kuvat/kartat\n"
 "\n"
-"Rot       =   Lämpötilat seuraavat 5 päivää\n"
-"Grün    =   Ennuste Suosikki 1\n"
-"Gelb     =   Ennuste Suosikki 2\n"
-"Blau     =   Ennuste Kotipaikka\n"
+"Punainen = Lämpötilat seuraavat 5 päivää\n"
+"Vihreä = Ennuste Suosikki 1\n"
+"Keltainen = Ennuste Suosikki 2\n"
+"Sininen = Ennuste Kotipaikka\n"
 "\n"
 "Tuulensuunta = Nuoli oikealle: Tuuli lännestä"
 
@@ -211,8 +211,8 @@ msgstr "Hessen"
 msgid "Home"
 msgstr "Kotipaikka"
 
-msgid "Humidity:"
-msgstr "Suht. kosteus:"
+msgid "Humidity: %s %s"
+msgstr "Suht. kosteus: %s %s"
 
 msgid "Hungary"
 msgstr "Unkari"
@@ -221,7 +221,7 @@ msgid "Imperial (C, mph)"
 msgstr "UK (C, mph)"
 
 msgid "Info - Legend"
-msgstr "Tietoja"
+msgstr "Tietoja - Selitykset"
 
 msgid "Ireland"
 msgstr "Irlanti"
@@ -239,10 +239,10 @@ msgid "Left - Previous page"
 msgstr "Vasen - Edellinen sivu"
 
 msgid "Left arrow - Previous day"
-msgstr "Vasen nuoli - Edellinen päivää"
+msgstr "Vasen nuoli - Edellinen päivä"
 
 msgid "Legend"
-msgstr "Info"
+msgstr "Selitykset"
 
 msgid "Lower Saxony"
 msgstr "Ala-Saksi"
@@ -257,7 +257,7 @@ msgid "Mecklenburg-Vorpommern"
 msgstr "Mecklenburg-Etu-Pommeri"
 
 msgid "Menu - Weather maps"
-msgstr "Valikko - sääkartat"
+msgstr "Menu - sääkartat"
 
 msgid "Metric (C, km/h)"
 msgstr "Metrinen (C, km/h)"
@@ -323,7 +323,7 @@ msgid "Right - Next page"
 msgstr "Oikea - Seuraava sivu"
 
 msgid "Right arrow - Next day"
-msgstr "Oikea nuoli - Seuraava pÃ¤ivÃ¤"
+msgstr "Oikea nuoli - Seuraava päivä"
 
 msgid "Russia"
 msgstr "Venäjä"
@@ -493,8 +493,11 @@ msgstr "keltainen"
 msgid "Feels"
 msgstr "Tuntuu kuin"
 
-msgid "feels like"
-msgstr "tuntuu kuin"
+msgid "Feels Like: %s %s"
+msgstr "Tuntuu kuin: %s %s"
+
+msgid "Precip chance: %s %s"
+msgstr "Sateen todennäköisyys: %s %s"
 
 msgid "Overcast and light wet snow"
 msgstr "Pilvistä, vähäistä räntäsadetta"
